// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Storyshots components/DetailsMenu/DetailsMenuCard/DetailsMenu Default 1`] = `
<div>
  <div
    class="leafygreen-ui-1ecxdul"
    style="max-width: 750px;"
  >
    <div
      class="css-1yypzp8"
    >
      <h3
        class="leafygreen-ui-feh85s"
      >
        Parsley Settings
      </h3>
      <div>
        <div
          class="leafygreen-ui-jp7pox"
        >
          <div
            aria-label="Details Card Tabs"
            aria-orientation="horizontal"
            class="leafygreen-ui-dy551c"
            role="tablist"
          >
            <button
              aria-controls="tab-panel-1"
              aria-selected="true"
              class="leafygreen-ui-oq6if2"
              data-text="Search & Filter"
              id="tab-2"
              name="Search & Filter"
              role="tab"
              tabindex="0"
            >
              <div
                class="leafygreen-ui-1nxuzmg"
              >
                Search & Filter
              </div>
            </button>
            <button
              aria-controls="tab-panel-3"
              aria-selected="false"
              class="leafygreen-ui-1vvp6ij"
              data-text="Log Viewing"
              id="tab-4"
              name="Log Viewing"
              role="tab"
              tabindex="-1"
            >
              <div
                class="leafygreen-ui-1nxuzmg"
              >
                Log Viewing
              </div>
            </button>
          </div>
          <div
            class="leafygreen-ui-ov1ktg"
          >
            <div
              class="leafygreen-ui-1sg2lsz"
            />
          </div>
        </div>
        <div>
          <div
            aria-labelledby="tab-2"
            id="tab-panel-1"
            role="tabpanel"
          >
            <div
              class="css-167okcj"
            >
              <div
                class="css-1ago99h"
              >
                <div
                  class="css-qzhvvy"
                >
                  <div
                    class="css-1sg2lsz"
                  >
                    <h6
                      class="css-1vhit7t leafygreen-ui-19p3n10"
                    >
                      Range
                    </h6>
                    <span
                      aria-disabled="true"
                      aria-label="more info"
                      class="leafygreen-ui-emw599"
                      data-testid="info-sprinkle-icon"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="Info With Circle Icon"
                        class="leafygreen-ui-1st74h4"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM9 4C9 4.55228 8.55228 5 8 5C7.44772 5 7 4.55228 7 4C7 3.44772 7.44772 3 8 3C8.55228 3 9 3.44772 9 4ZM8 6C8.55228 6 9 6.44772 9 7V11H9.5C9.77614 11 10 11.2239 10 11.5C10 11.7761 9.77614 12 9.5 12H6.5C6.22386 12 6 11.7761 6 11.5C6 11.2239 6.22386 11 6.5 11H7V7H6.5C6.22386 7 6 6.77614 6 6.5C6 6.22386 6.22386 6 6.5 6H8Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="css-1iyoj2o"
                  >
                    <div
                      class="css-1sg2lsz"
                    >
                      <div
                        class="css-1b84j75 leafygreen-ui-90q1a7"
                      >
                        <div
                          class="leafygreen-ui-lzja97"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="Range Lower Bound"
                            autocomplete="on"
                            class="leafygreen-ui-lkup3q"
                            data-cy="range-lower-bound"
                            id="textinput-3"
                            min="0"
                            placeholder="0"
                            required=""
                            type="number"
                            value=""
                          />
                          <div
                            class="lg-ui-icon-selector-0000 leafygreen-ui-dhxvhh"
                          />
                        </div>
                      </div>
                      <div
                        class="css-1b84j75 leafygreen-ui-90q1a7"
                      >
                        <div
                          class="leafygreen-ui-lzja97"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="Range Upper Bound"
                            autocomplete="on"
                            class="leafygreen-ui-lkup3q"
                            data-cy="range-upper-bound"
                            id="textinput-4"
                            min="0"
                            placeholder="100"
                            required=""
                            type="number"
                            value=""
                          />
                          <div
                            class="lg-ui-icon-selector-0000 leafygreen-ui-dhxvhh"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="css-91jh6a"
                >
                  <div
                    class="css-1sg2lsz"
                  >
                    <h6
                      class="css-1vhit7t leafygreen-ui-19p3n10"
                    >
                      Case Sensitive
                    </h6>
                    <span
                      aria-disabled="true"
                      aria-label="more info"
                      class="leafygreen-ui-emw599"
                      data-testid="info-sprinkle-icon"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="Info With Circle Icon"
                        class="leafygreen-ui-1st74h4"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM9 4C9 4.55228 8.55228 5 8 5C7.44772 5 7 4.55228 7 4C7 3.44772 7.44772 3 8 3C8.55228 3 9 3.44772 9 4ZM8 6C8.55228 6 9 6.44772 9 7V11H9.5C9.77614 11 10 11.2239 10 11.5C10 11.7761 9.77614 12 9.5 12H6.5C6.22386 12 6 11.7761 6 11.5C6 11.2239 6.22386 11 6.5 11H7V7H6.5C6.22386 7 6 6.77614 6 6.5C6 6.22386 6.22386 6 6.5 6H8Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="css-1sg2lsz"
                  >
                    <small
                      class="css-155nmlp leafygreen-ui-6flbwy"
                    >
                      OFF
                    </small>
                    <button
                      aria-checked="false"
                      aria-disabled="false"
                      aria-labelledby="Case Sensitive Toggle"
                      class="lg-ui-toggle-button-0000 leafygreen-ui-1pz71rg"
                      data-cy="case-sensitive-toggle"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="leafygreen-ui-w7wsyg"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label="Checkmark Icon"
                          class="leafygreen-ui-1m8vtmm"
                          height="14"
                          role="img"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M6.30583 9.05037L11.7611 3.59509C12.1516 3.20457 12.7848 3.20457 13.1753 3.59509L13.8824 4.3022C14.273 4.69273 14.273 5.32589 13.8824 5.71642L6.81525 12.7836C6.38819 13.2106 5.68292 13.1646 5.31505 12.6856L2.26638 8.71605C1.92998 8.27804 2.01235 7.65025 2.45036 7.31385L3.04518 6.85702C3.59269 6.43652 4.37742 6.53949 4.79792 7.087L6.30583 9.05037Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </button>
                    <small
                      class="css-155nmlp leafygreen-ui-6flbwy"
                    >
                      ON
                    </small>
                  </div>
                </div>
                <div
                  class="css-91jh6a"
                >
                  <div
                    class="css-1sg2lsz"
                  >
                    <h6
                      class="css-1vhit7t leafygreen-ui-19p3n10"
                    >
                      Filter Logic
                    </h6>
                    <span
                      aria-disabled="true"
                      aria-label="more info"
                      class="leafygreen-ui-emw599"
                      data-testid="info-sprinkle-icon"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="Info With Circle Icon"
                        class="leafygreen-ui-1st74h4"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM9 4C9 4.55228 8.55228 5 8 5C7.44772 5 7 4.55228 7 4C7 3.44772 7.44772 3 8 3C8.55228 3 9 3.44772 9 4ZM8 6C8.55228 6 9 6.44772 9 7V11H9.5C9.77614 11 10 11.2239 10 11.5C10 11.7761 9.77614 12 9.5 12H6.5C6.22386 12 6 11.7761 6 11.5C6 11.2239 6.22386 11 6.5 11H7V7H6.5C6.22386 7 6 6.77614 6 6.5C6 6.22386 6.22386 6 6.5 6H8Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="css-1sg2lsz"
                  >
                    <small
                      class="css-155nmlp leafygreen-ui-6flbwy"
                    >
                      AND
                    </small>
                    <button
                      aria-checked="false"
                      aria-disabled="false"
                      aria-labelledby="Filter Logic Toggle"
                      class="lg-ui-toggle-button-0000 leafygreen-ui-1pz71rg"
                      data-cy="filter-logic-toggle"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="leafygreen-ui-w7wsyg"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label="Checkmark Icon"
                          class="leafygreen-ui-1m8vtmm"
                          height="14"
                          role="img"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M6.30583 9.05037L11.7611 3.59509C12.1516 3.20457 12.7848 3.20457 13.1753 3.59509L13.8824 4.3022C14.273 4.69273 14.273 5.32589 13.8824 5.71642L6.81525 12.7836C6.38819 13.2106 5.68292 13.1646 5.31505 12.6856L2.26638 8.71605C1.92998 8.27804 2.01235 7.65025 2.45036 7.31385L3.04518 6.85702C3.59269 6.43652 4.37742 6.53949 4.79792 7.087L6.30583 9.05037Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </button>
                    <small
                      class="css-155nmlp leafygreen-ui-6flbwy"
                    >
                      OR
                    </small>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-91jh6a"
            >
              <button
                aria-disabled="true"
                class="lg-ui-button-0000 leafygreen-ui-1qjl8rb"
                data-cy="jira-button"
                type="button"
              >
                <div
                  class="leafygreen-ui-v038xi"
                />
                <div
                  class="leafygreen-ui-v95oty"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="leafygreen-ui-5xj6yo"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1zm8-.928L7.257 6.498A.857.857 0 007 7.11v.688h3.01a.857.857 0 00.857-.858V4h-.717a.857.857 0 00-.6.246l-.55.54zM4.867 1H4.15a.857.857 0 00-.601.246L1.257 3.498A.857.857 0 001 4.11v.688h3.01a.857.857 0 00.857-.858V1zM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 017 13.286V12z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  JIRA
                </div>
              </button>
              <button
                aria-disabled="true"
                class="lg-ui-button-0000 leafygreen-ui-1qjl8rb"
                data-cy="job-logs-button"
                target="_blank"
                type="button"
              >
                <div
                  class="leafygreen-ui-v038xi"
                />
                <div
                  class="leafygreen-ui-v95oty"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="leafygreen-ui-5xj6yo"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.623 5.186a.278.278 0 000-.385l-2.805-2.915a.277.277 0 00-.477.192v1.424A6.5 6.5 0 005 10v.1a1.5 1.5 0 003 0V10a3.5 3.5 0 013.34-3.496v1.405c0 .25.305.373.478.193l2.805-2.916z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.5 3.879a.75.75 0 00-.75-.75H4a2 2 0 00-2 2v6.864a2 2 0 002 2h6.864a2 2 0 002-2V10.05a.75.75 0 00-1.5 0v1.943a.5.5 0 01-.5.5H4a.5.5 0 01-.5-.5V5.129a.5.5 0 01.5-.5h1.75a.75.75 0 00.75-.75z"
                      fill="currentColor"
                    />
                  </svg>
                  Job logs
                </div>
              </button>
              <button
                aria-disabled="true"
                class="lg-ui-button-0000 leafygreen-ui-1qjl8rb"
                data-cy="raw-log-button"
                target="_blank"
                type="button"
              >
                <div
                  class="leafygreen-ui-v038xi"
                />
                <div
                  class="leafygreen-ui-v95oty"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="leafygreen-ui-5xj6yo"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.623 5.186a.278.278 0 000-.385l-2.805-2.915a.277.277 0 00-.477.192v1.424A6.5 6.5 0 005 10v.1a1.5 1.5 0 003 0V10a3.5 3.5 0 013.34-3.496v1.405c0 .25.305.373.478.193l2.805-2.916z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.5 3.879a.75.75 0 00-.75-.75H4a2 2 0 00-2 2v6.864a2 2 0 002 2h6.864a2 2 0 002-2V10.05a.75.75 0 00-1.5 0v1.943a.5.5 0 01-.5.5H4a.5.5 0 01-.5-.5V5.129a.5.5 0 01.5-.5h1.75a.75.75 0 00.75-.75z"
                      fill="currentColor"
                    />
                  </svg>
                  Raw
                </div>
              </button>
              <button
                aria-disabled="true"
                class="lg-ui-button-0000 leafygreen-ui-1qjl8rb"
                data-cy="html-log-button"
                target="_blank"
                type="button"
              >
                <div
                  class="leafygreen-ui-v038xi"
                />
                <div
                  class="leafygreen-ui-v95oty"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="leafygreen-ui-5xj6yo"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.623 5.186a.278.278 0 000-.385l-2.805-2.915a.277.277 0 00-.477.192v1.424A6.5 6.5 0 005 10v.1a1.5 1.5 0 003 0V10a3.5 3.5 0 013.34-3.496v1.405c0 .25.305.373.478.193l2.805-2.916z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.5 3.879a.75.75 0 00-.75-.75H4a2 2 0 00-2 2v6.864a2 2 0 002 2h6.864a2 2 0 002-2V10.05a.75.75 0 00-1.5 0v1.943a.5.5 0 01-.5.5H4a.5.5 0 01-.5-.5V5.129a.5.5 0 01.5-.5h1.75a.75.75 0 00.75-.75z"
                      fill="currentColor"
                    />
                  </svg>
                  HTML
                </div>
              </button>
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                class="lg-ui-button-0000 leafygreen-ui-xcwxw8"
                data-cy="secondary-links-button"
                type="button"
              >
                <div
                  class="leafygreen-ui-v038xi"
                />
                <div
                  class="leafygreen-ui-v95oty"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="leafygreen-ui-18si895"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2.75 6a1.75 1.75 0 110 3.5 1.75 1.75 0 010-3.5zm5 0a1.75 1.75 0 110 3.5 1.75 1.75 0 010-3.5zm6.75 1.75a1.75 1.75 0 10-3.5 0 1.75 1.75 0 003.5 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="tab-4"
            id="tab-panel-3"
            role="tabpanel"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots components/DetailsMenu/DetailsMenuCard/DetailsMenu With Downloaded Log 1`] = `
<div>
  <div
    class="leafygreen-ui-1ecxdul"
    style="max-width: 750px;"
  >
    <div
      class="css-1yypzp8"
    >
      <h3
        class="leafygreen-ui-feh85s"
      >
        Parsley Settings
      </h3>
      <div>
        <div
          class="leafygreen-ui-jp7pox"
        >
          <div
            aria-label="Details Card Tabs"
            aria-orientation="horizontal"
            class="leafygreen-ui-dy551c"
            role="tablist"
          >
            <button
              aria-controls="tab-panel-5"
              aria-selected="true"
              class="leafygreen-ui-oq6if2"
              data-text="Search & Filter"
              id="tab-6"
              name="Search & Filter"
              role="tab"
              tabindex="0"
            >
              <div
                class="leafygreen-ui-1nxuzmg"
              >
                Search & Filter
              </div>
            </button>
            <button
              aria-controls="tab-panel-7"
              aria-selected="false"
              class="leafygreen-ui-1vvp6ij"
              data-text="Log Viewing"
              id="tab-8"
              name="Log Viewing"
              role="tab"
              tabindex="-1"
            >
              <div
                class="leafygreen-ui-1nxuzmg"
              >
                Log Viewing
              </div>
            </button>
          </div>
          <div
            class="leafygreen-ui-ov1ktg"
          >
            <div
              class="leafygreen-ui-1sg2lsz"
            />
          </div>
        </div>
        <div>
          <div
            aria-labelledby="tab-6"
            id="tab-panel-5"
            role="tabpanel"
          >
            <div
              class="css-167okcj"
            >
              <div
                class="css-1ago99h"
              >
                <div
                  class="css-qzhvvy"
                >
                  <div
                    class="css-1sg2lsz"
                  >
                    <h6
                      class="css-1vhit7t leafygreen-ui-19p3n10"
                    >
                      Range
                    </h6>
                    <span
                      aria-disabled="true"
                      aria-label="more info"
                      class="leafygreen-ui-emw599"
                      data-testid="info-sprinkle-icon"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="Info With Circle Icon"
                        class="leafygreen-ui-1st74h4"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM9 4C9 4.55228 8.55228 5 8 5C7.44772 5 7 4.55228 7 4C7 3.44772 7.44772 3 8 3C8.55228 3 9 3.44772 9 4ZM8 6C8.55228 6 9 6.44772 9 7V11H9.5C9.77614 11 10 11.2239 10 11.5C10 11.7761 9.77614 12 9.5 12H6.5C6.22386 12 6 11.7761 6 11.5C6 11.2239 6.22386 11 6.5 11H7V7H6.5C6.22386 7 6 6.77614 6 6.5C6 6.22386 6.22386 6 6.5 6H8Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="css-1iyoj2o"
                  >
                    <div
                      class="css-1sg2lsz"
                    >
                      <div
                        class="css-1b84j75 leafygreen-ui-90q1a7"
                      >
                        <div
                          class="leafygreen-ui-lzja97"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="Range Lower Bound"
                            autocomplete="on"
                            class="leafygreen-ui-lkup3q"
                            data-cy="range-lower-bound"
                            id="textinput-7"
                            min="0"
                            placeholder="0"
                            required=""
                            type="number"
                            value=""
                          />
                          <div
                            class="lg-ui-icon-selector-0000 leafygreen-ui-dhxvhh"
                          />
                        </div>
                      </div>
                      <div
                        class="css-1b84j75 leafygreen-ui-90q1a7"
                      >
                        <div
                          class="leafygreen-ui-lzja97"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="Range Upper Bound"
                            autocomplete="on"
                            class="leafygreen-ui-lkup3q"
                            data-cy="range-upper-bound"
                            id="textinput-8"
                            min="0"
                            placeholder="100"
                            required=""
                            type="number"
                            value=""
                          />
                          <div
                            class="lg-ui-icon-selector-0000 leafygreen-ui-dhxvhh"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="css-91jh6a"
                >
                  <div
                    class="css-1sg2lsz"
                  >
                    <h6
                      class="css-1vhit7t leafygreen-ui-19p3n10"
                    >
                      Case Sensitive
                    </h6>
                    <span
                      aria-disabled="true"
                      aria-label="more info"
                      class="leafygreen-ui-emw599"
                      data-testid="info-sprinkle-icon"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="Info With Circle Icon"
                        class="leafygreen-ui-1st74h4"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM9 4C9 4.55228 8.55228 5 8 5C7.44772 5 7 4.55228 7 4C7 3.44772 7.44772 3 8 3C8.55228 3 9 3.44772 9 4ZM8 6C8.55228 6 9 6.44772 9 7V11H9.5C9.77614 11 10 11.2239 10 11.5C10 11.7761 9.77614 12 9.5 12H6.5C6.22386 12 6 11.7761 6 11.5C6 11.2239 6.22386 11 6.5 11H7V7H6.5C6.22386 7 6 6.77614 6 6.5C6 6.22386 6.22386 6 6.5 6H8Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="css-1sg2lsz"
                  >
                    <small
                      class="css-155nmlp leafygreen-ui-6flbwy"
                    >
                      OFF
                    </small>
                    <button
                      aria-checked="false"
                      aria-disabled="false"
                      aria-labelledby="Case Sensitive Toggle"
                      class="lg-ui-toggle-button-0000 leafygreen-ui-1pz71rg"
                      data-cy="case-sensitive-toggle"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="leafygreen-ui-w7wsyg"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label="Checkmark Icon"
                          class="leafygreen-ui-1m8vtmm"
                          height="14"
                          role="img"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M6.30583 9.05037L11.7611 3.59509C12.1516 3.20457 12.7848 3.20457 13.1753 3.59509L13.8824 4.3022C14.273 4.69273 14.273 5.32589 13.8824 5.71642L6.81525 12.7836C6.38819 13.2106 5.68292 13.1646 5.31505 12.6856L2.26638 8.71605C1.92998 8.27804 2.01235 7.65025 2.45036 7.31385L3.04518 6.85702C3.59269 6.43652 4.37742 6.53949 4.79792 7.087L6.30583 9.05037Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </button>
                    <small
                      class="css-155nmlp leafygreen-ui-6flbwy"
                    >
                      ON
                    </small>
                  </div>
                </div>
                <div
                  class="css-91jh6a"
                >
                  <div
                    class="css-1sg2lsz"
                  >
                    <h6
                      class="css-1vhit7t leafygreen-ui-19p3n10"
                    >
                      Filter Logic
                    </h6>
                    <span
                      aria-disabled="true"
                      aria-label="more info"
                      class="leafygreen-ui-emw599"
                      data-testid="info-sprinkle-icon"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="Info With Circle Icon"
                        class="leafygreen-ui-1st74h4"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM9 4C9 4.55228 8.55228 5 8 5C7.44772 5 7 4.55228 7 4C7 3.44772 7.44772 3 8 3C8.55228 3 9 3.44772 9 4ZM8 6C8.55228 6 9 6.44772 9 7V11H9.5C9.77614 11 10 11.2239 10 11.5C10 11.7761 9.77614 12 9.5 12H6.5C6.22386 12 6 11.7761 6 11.5C6 11.2239 6.22386 11 6.5 11H7V7H6.5C6.22386 7 6 6.77614 6 6.5C6 6.22386 6.22386 6 6.5 6H8Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="css-1sg2lsz"
                  >
                    <small
                      class="css-155nmlp leafygreen-ui-6flbwy"
                    >
                      AND
                    </small>
                    <button
                      aria-checked="false"
                      aria-disabled="false"
                      aria-labelledby="Filter Logic Toggle"
                      class="lg-ui-toggle-button-0000 leafygreen-ui-1pz71rg"
                      data-cy="filter-logic-toggle"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="leafygreen-ui-w7wsyg"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label="Checkmark Icon"
                          class="leafygreen-ui-1m8vtmm"
                          height="14"
                          role="img"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M6.30583 9.05037L11.7611 3.59509C12.1516 3.20457 12.7848 3.20457 13.1753 3.59509L13.8824 4.3022C14.273 4.69273 14.273 5.32589 13.8824 5.71642L6.81525 12.7836C6.38819 13.2106 5.68292 13.1646 5.31505 12.6856L2.26638 8.71605C1.92998 8.27804 2.01235 7.65025 2.45036 7.31385L3.04518 6.85702C3.59269 6.43652 4.37742 6.53949 4.79792 7.087L6.30583 9.05037Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </button>
                    <small
                      class="css-155nmlp leafygreen-ui-6flbwy"
                    >
                      OR
                    </small>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-91jh6a"
            >
              <button
                aria-disabled="true"
                class="lg-ui-button-0000 leafygreen-ui-1qjl8rb"
                data-cy="jira-button"
                type="button"
              >
                <div
                  class="leafygreen-ui-v038xi"
                />
                <div
                  class="leafygreen-ui-v95oty"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="leafygreen-ui-5xj6yo"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1zm8-.928L7.257 6.498A.857.857 0 007 7.11v.688h3.01a.857.857 0 00.857-.858V4h-.717a.857.857 0 00-.6.246l-.55.54zM4.867 1H4.15a.857.857 0 00-.601.246L1.257 3.498A.857.857 0 001 4.11v.688h3.01a.857.857 0 00.857-.858V1zM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 017 13.286V12z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  JIRA
                </div>
              </button>
              <button
                aria-disabled="true"
                class="lg-ui-button-0000 leafygreen-ui-1qjl8rb"
                data-cy="job-logs-button"
                target="_blank"
                type="button"
              >
                <div
                  class="leafygreen-ui-v038xi"
                />
                <div
                  class="leafygreen-ui-v95oty"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="leafygreen-ui-5xj6yo"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.623 5.186a.278.278 0 000-.385l-2.805-2.915a.277.277 0 00-.477.192v1.424A6.5 6.5 0 005 10v.1a1.5 1.5 0 003 0V10a3.5 3.5 0 013.34-3.496v1.405c0 .25.305.373.478.193l2.805-2.916z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.5 3.879a.75.75 0 00-.75-.75H4a2 2 0 00-2 2v6.864a2 2 0 002 2h6.864a2 2 0 002-2V10.05a.75.75 0 00-1.5 0v1.943a.5.5 0 01-.5.5H4a.5.5 0 01-.5-.5V5.129a.5.5 0 01.5-.5h1.75a.75.75 0 00.75-.75z"
                      fill="currentColor"
                    />
                  </svg>
                  Job logs
                </div>
              </button>
              <button
                aria-disabled="true"
                class="lg-ui-button-0000 leafygreen-ui-1qjl8rb"
                data-cy="raw-log-button"
                target="_blank"
                type="button"
              >
                <div
                  class="leafygreen-ui-v038xi"
                />
                <div
                  class="leafygreen-ui-v95oty"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="leafygreen-ui-5xj6yo"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.623 5.186a.278.278 0 000-.385l-2.805-2.915a.277.277 0 00-.477.192v1.424A6.5 6.5 0 005 10v.1a1.5 1.5 0 003 0V10a3.5 3.5 0 013.34-3.496v1.405c0 .25.305.373.478.193l2.805-2.916z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.5 3.879a.75.75 0 00-.75-.75H4a2 2 0 00-2 2v6.864a2 2 0 002 2h6.864a2 2 0 002-2V10.05a.75.75 0 00-1.5 0v1.943a.5.5 0 01-.5.5H4a.5.5 0 01-.5-.5V5.129a.5.5 0 01.5-.5h1.75a.75.75 0 00.75-.75z"
                      fill="currentColor"
                    />
                  </svg>
                  Raw
                </div>
              </button>
              <button
                aria-disabled="true"
                class="lg-ui-button-0000 leafygreen-ui-1qjl8rb"
                data-cy="html-log-button"
                target="_blank"
                type="button"
              >
                <div
                  class="leafygreen-ui-v038xi"
                />
                <div
                  class="leafygreen-ui-v95oty"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="leafygreen-ui-5xj6yo"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.623 5.186a.278.278 0 000-.385l-2.805-2.915a.277.277 0 00-.477.192v1.424A6.5 6.5 0 005 10v.1a1.5 1.5 0 003 0V10a3.5 3.5 0 013.34-3.496v1.405c0 .25.305.373.478.193l2.805-2.916z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.5 3.879a.75.75 0 00-.75-.75H4a2 2 0 00-2 2v6.864a2 2 0 002 2h6.864a2 2 0 002-2V10.05a.75.75 0 00-1.5 0v1.943a.5.5 0 01-.5.5H4a.5.5 0 01-.5-.5V5.129a.5.5 0 01.5-.5h1.75a.75.75 0 00.75-.75z"
                      fill="currentColor"
                    />
                  </svg>
                  HTML
                </div>
              </button>
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                class="lg-ui-button-0000 leafygreen-ui-xcwxw8"
                data-cy="secondary-links-button"
                type="button"
              >
                <div
                  class="leafygreen-ui-v038xi"
                />
                <div
                  class="leafygreen-ui-v95oty"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="leafygreen-ui-18si895"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2.75 6a1.75 1.75 0 110 3.5 1.75 1.75 0 010-3.5zm5 0a1.75 1.75 0 110 3.5 1.75 1.75 0 010-3.5zm6.75 1.75a1.75 1.75 0 10-3.5 0 1.75 1.75 0 003.5 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <label
              class="leafygreen-ui-gd3h51"
              for="code-1"
            >
              Fetch the log via CLI
            </label>
            <div
              class="css-1ago99h leafygreen-ui-s93xmp"
            >
              <code
                class="leafygreen-ui-4f6y2t"
                id="code-1"
              >
                evergreen buildlogger fetch --task_id mci_ubuntu1604_test_model_task_5f4d3b4f562343215f7f5f3d_20_08_25_15_50_10 --execution 0 --test_name TestModelGetArtifacts
              </code>
              <span
                class="leafygreen-ui-11qmwnb"
              />
            </div>
          </div>
          <div
            aria-labelledby="tab-8"
            id="tab-panel-7"
            role="tabpanel"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
